--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                         <button class="sidebar-toggle-btn">
                             <i class="fa-solid fa-bars"></i>
                         </button>
-                        <a href="#"><img class="logo" src="img/logo.png" alt=""></a>
+                        <span class="">
+                            <a href="#" class="logo-text">DEVCORE</a>
+                        </span>
                     </span>
 
                     <ul class="links-container">
@@ -842,7 +844,7 @@
 
 
     <div class="copyright">
-        <p>&copy; 2024 SKILLUP. All Rights Reserved.</p>
+        <p>&copy; 2024 DEVCORE. All Rights Reserved.</p>
     </div>
     <script src="app.js"></script>
 </body>
